--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Avyra | Roblox Staff Management</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <header>
+    <div class="logo">Avyra</div>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">Features</a>
+      <a href="#">Login</a>
+    </div>
+  </header>
+
+  <section class="hero">
+    <h1>Roblox Staff Management, Reinvented.</h1>
+    <p>Avyra helps you manage sessions, staff activity, punishments, and more — without needing to link Roblox groups. Simple, powerful, and completely free.</p>
+    <button class="login-btn" onclick="loginWithDiscord()">Login with Discord</button>
+  </section>
+
+  <section class="features">
+    <div class="feature-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/535/535239.png" alt="Workspace Icon">
+      <h3>Up to 3 Workspaces</h3>
+      <p>Each user can manage up to three unique workspaces, personalized to your needs.</p>
+    </div>
+    <div class="feature-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png" alt="Customization Icon">
+      <h3>Full Customization</h3>
+      <p>Change workspace names, colors, and setup formats for punishments or sessions.</p>
+    </div>
+    <div class="feature-box">
+      <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png" alt="Session Icon">
+      <h3>Session Management</h3>
+      <p>Organize training, interviews, or events with clear roles and logs.</p>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Avyra. All rights reserved.
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
