--- a/dashboard.html
+++ b/dashboard.html
@@ -2,83 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Avyra Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #1d1f24;
-      color: white;
-      text-align: center;
       margin: 0;
       padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #12151c;
+      color: #fff;
     }
-    h1 {
-      font-size: 2.5rem;
-      margin-top: 50px;
-    }
-    #username {
-      font-size: 1.5rem;
-      margin-top: 20px;
-    }
-    .dashboard-container {
-      margin-top: 40px;
-      background-color: #2c2f36;
-      border-radius: 8px;
+
+    header {
       padding: 20px;
-      width: 60%;
-      margin: 0 auto;
+      background-color: #1f2230;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    button {
+
+    header h1 {
+      font-size: 1.8rem;
+    }
+
+    .container {
+      padding: 30px;
+    }
+
+    .workspace-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .workspace-header h2 {
+      font-size: 1.5rem;
+    }
+
+    #createWorkspaceBtn {
+      padding: 10px 20px;
+      font-size: 1rem;
       background-color: #5865F2;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+    }
+
+    #createWorkspaceBtn:disabled {
+      background-color: #2f3240;
+      cursor: not-allowed;
+    }
+
+    .workspace-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .workspace-card {
+      background-color: #1f2230;
+      padding: 20px;
+      border-radius: 10px;
+      transition: 0.2s;
+    }
+
+    .workspace-card:hover {
+      background-color: #252834;
+    }
+
+    .workspace-name {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+    }
+
+    .workspace-actions button {
+      background-color: #444859;
       color: white;
       border: none;
-      padding: 10px 20px;
-      margin-top: 30px;
-      font-size: 1rem;
+      padding: 5px 10px;
+      margin-right: 5px;
+      border-radius: 4px;
       cursor: pointer;
-      border-radius: 5px;
     }
-    button:hover {
-      background-color: #4752C4;
+
+    .workspace-actions button:hover {
+      background-color: #5865F2;
+    }
+
+    .no-workspaces {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 1.1rem;
+      color: #888;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Avyra Dashboard</h1>
+    <div id="userInfo">Loading...</div>
+  </header>
 
-  <h1>Welcome to Your Dashboard</h1>
-  
-  <!-- Display User Information -->
-  <div class="dashboard-container">
-    <h2 id="username">Loading...</h2>
-    <p id="userID"></p>
-    <p id="userEmail"></p>
+  <div class="container">
+    <div class="workspace-header">
+      <h2>Your Workspaces</h2>
+      <button id="createWorkspaceBtn">+ Create Workspace</button>
+    </div>
 
-    <!-- Logout Button -->
-    <button id="logoutButton">Logout</button>
+    <div id="workspaceGrid" class="workspace-grid"></div>
+    <div id="noWorkspaces" class="no-workspaces" style="display: none;">You have no workspaces yet.</div>
   </div>
 
-  <script>
-    window.onload = function () {
-      const user = JSON.parse(localStorage.getItem('user')); // Retrieve user data from localStorage
-
-      if (user) {
-        // Display user info on the dashboard
-        document.getElementById('username').innerText = `Welcome, ${user.username}!`;
-        document.getElementById('userID').innerText = `User ID: ${user.id}`;
-        document.getElementById('userEmail').innerText = `Email: ${user.email || 'N/A'}`;
-      } else {
-        // Redirect to login if no user data is found
-        window.location.href = '/index.html'; // Redirect to login page
-      }
-
-      // Logout button functionality
-      document.getElementById('logoutButton').addEventListener('click', function () {
-        localStorage.removeItem('user'); // Clear user data from localStorage
-        window.location.href = '/index.html'; // Redirect to login page after logout
-      });
-    };
-  </script>
-
+  <script src="dashboard.js"></script>
 </body>
 </html>
